# proxy-manager

./: .gitignore  Proxy Manager_0.1.0_x64_en-US.msi  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backends.rs
src-tauri/src/services/: backend_runtime.rs  backend_types.rs  job_object.rs  mod.rs
src/components/: delete-confirm-dialog.tsx  logs-viewer.tsx  proxy-card.tsx  proxy-dialog.tsx  proxy-list.tsx  terminal-input.tsx
src/hooks/: use-logs.ts  use-proxies.ts
src/lib/: api.ts
