[package]
name = "proxy-manager"
version = "0.1.0"
description = "Standalone External Proxy Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "proxy_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "time"] }
uuid = { version = "1.11", features = ["v4"] }
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
